--- a/assets/styles/presentation-entreprise.css
+++ b/assets/styles/presentation-entreprise.css
@@ -142,3 +142,40 @@ main .entreprise .description fieldset legend {
     gap: 1rem;
   }
 }
+
+main #pagination {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 2rem;
+  gap: 0.75rem;
+}
+
+main #pagination a {
+  padding: 0.5rem;
+  border: 1px solid var(--blue);
+  border-radius: 5px;
+  width: auto;
+  background-color: var(--blue-dark);
+  color: var(--white);
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
+  border: 1px solid var(--blue-dark);
+  margin-top: 1rem;
+}
+
+main .offre button:hover,
+main #pagination a:hover {
+  background-color: var(--blue-dark-contrast-hover);
+}
+
+main #pagination a.active {
+  background-color: var(--black);
+  color: var(--white);
+}
+
+main #pagination a.active:hover {
+  background-color: var(--black);
+  color: var(--white);
+}
